force-app/main/default/objects/Property_Management__c.object
<CustomObject>
    <customHelpPage>Property_Management_Help</customHelpPage>
    <description>Tab dedicated to track property management units and their related property interests, contracts, payment information and other activities on property managed by TNC.</description>
    <fields>
        <fullName>APN_s_Affected_by_Williamson_Act__c</fullName>
        <description>Moved to property interest</description>
        <inlineHelpText>Please enter in the APN&apos;s affected by the Williamson Act contract.</inlineHelpText>
        <label>XDeprecate_APN&apos;s Affected by Williamson</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <description>Roll up to check property interest for active interests</description>
        <inlineHelpText>The number of property interest in this unit that are actively TNC owned or managed.</inlineHelpText>
        <label>Number of Active Interests</label>
        <summaryFilterItems>
            <field>Property_Interest__c.Ownership_Status__c</field>
            <operation>equals</operation>
            <value>TNC Owned Fee, TNC Managed, TNC Held Easement or Deed Restriction, TNC Owned Rights</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Interest__c.Property_Interest_Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Additional_Water_Report_Filing_Info__c</fullName>
        <description>Moved to Water Right object</description>
        <inlineHelpText>Please enter in any additional information related to the latest water report filing.</inlineHelpText>
        <label>XDeprecate_Additional Water Report</label>
        <length>425</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Welfare_Exemptions_Applied_For__c</fullName>
        <description>Moved to Property Interest</description>
        <inlineHelpText>Please select all the tax years this property has filed welfare exemptions.  You may select more than one year.  And attach the annual exemption filings to the &quot;Notes &amp; Attachments&quot; section of the property management record.</inlineHelpText>
        <label>XDeprecate_Annual Welfare Exemptions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <description>Moved to Water Right Object</description>
        <inlineHelpText>Please enter the Application ID number from the License for Diversion and Water Use document issued by the State Water Rights Board.</inlineHelpText>
        <label>XDeprecate_Application ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_Parcel_Number_Rollup__c</fullName>
        <inlineHelpText>Read-Only - to update go to the property interest record and update the list of APNs there. List of the Assessor Parcel Numbers for each of the interests in this property management unit.</inlineHelpText>
        <label>Assessor Parcel Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assessor_Parcel_Numbers__c</fullName>
        <description>Moved to property interest</description>
        <inlineHelpText>Please include the current  - active APN&apos;s for the property.</inlineHelpText>
        <label>XDeprecate_Assessor Parcel Numbers</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Atlas_URL__c</fullName>
        <description>https://docs.google.com/document/d/1Uj1bIjSpOId2WmFTqZKEq2aAHSYLXEj0xomnNdIZBoQ/edit</description>
        <formula>&apos;https://atlas.codefornature.org/#/topo-vector/&apos;&amp;Zoom_Level__c&amp;&apos;/10111415161719202122232430313435990504030807/null/null/&apos;&amp;Mean_Longitude__c&amp;&apos;/&apos;&amp;Mean_Latitude__c</formula>
        <inlineHelpText>URL to Conservation Atlas</inlineHelpText>
        <label>Atlas URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attorney</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Property_Management1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLS_MABR_ID__c</fullName>
        <inlineHelpText>In CLS each managed area basic record has an unique number.</inlineHelpText>
        <label>CLS MABR ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLS_Site__c</fullName>
        <inlineHelpText>Please enter in the name of the CLS Site.</inlineHelpText>
        <label>CLS Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLS_Tract_ID__c</fullName>
        <inlineHelpText>In CLS each tract record has a unique number.</inlineHelpText>
        <label>CLS Tract ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLS_Tract_Name__c</fullName>
        <inlineHelpText>The official Legal Link names of the tracts that are a part of this Property Management Unit. Rolled up from related Property Interests.</inlineHelpText>
        <label>Legal Link Tract Name(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_OPDMD_Form_Date__c</fullName>
        <description>Date when the OPDMD form was completed and approved.</description>
        <inlineHelpText>Enter the date the Other Power-Driven Mobility Device (OPDMD) Assessment Form was completed and approved.</inlineHelpText>
        <label>Completed OPDMD Form Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conservation_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>New field to replace the &quot;Places&quot; in the account look up.  Account Look up on Properties and Property Interests will be converted to the owner.</description>
        <inlineHelpText>Select the Conservation Area in which this property management unit lies.</inlineHelpText>
        <label>Conservation Area</label>
        <referenceTo>Conservation_Area__c</referenceTo>
        <relationshipName>Property_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conservation_Monitoring_Plan__c</fullName>
        <label>Conservation Monitoring Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Plan Produced</fullName>
                </value>
                <value>
                    <fullName>Plan Produced</fullName>
                </value>
                <value>
                    <fullName>Plan Implemented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conservation_Stewardship_Staffing__c</fullName>
        <label>Conservation Stewardship Staffing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Staff</fullName>
                </value>
                <value>
                    <fullName>Partial Staff</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conservation_Targets__c</fullName>
        <inlineHelpText>List and describe the conservation targets, their current status and target habitats.</inlineHelpText>
        <label>Conservation Targets</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>County_Global__c</fullName>
        <description>Moved to Property Interest</description>
        <label>XDeprecate_County</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>County</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>XDeprecated: County</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alameda</fullName>
                </value>
                <value>
                    <fullName>Alpine</fullName>
                </value>
                <value>
                    <fullName>Amador</fullName>
                </value>
                <value>
                    <fullName>Butte</fullName>
                </value>
                <value>
                    <fullName>Calaveras</fullName>
                </value>
                <value>
                    <fullName>Colusa</fullName>
                </value>
                <value>
                    <fullName>Contra Costa</fullName>
                </value>
                <value>
                    <fullName>Del Norte</fullName>
                </value>
                <value>
                    <fullName>El Dorado</fullName>
                </value>
                <value>
                    <fullName>Fresno</fullName>
                </value>
                <value>
                    <fullName>Glenn</fullName>
                </value>
                <value>
                    <fullName>Humboldt</fullName>
                </value>
                <value>
                    <fullName>Imperial</fullName>
                </value>
                <value>
                    <fullName>Inyo</fullName>
                </value>
                <value>
                    <fullName>Kern</fullName>
                </value>
                <value>
                    <fullName>Kings</fullName>
                </value>
                <value>
                    <fullName>Lake</fullName>
                </value>
                <value>
                    <fullName>Lassen</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Madera</fullName>
                </value>
                <value>
                    <fullName>Marin</fullName>
                </value>
                <value>
                    <fullName>Mariposa</fullName>
                </value>
                <value>
                    <fullName>Mendocino</fullName>
                </value>
                <value>
                    <fullName>Merced</fullName>
                </value>
                <value>
                    <fullName>Modoc</fullName>
                </value>
                <value>
                    <fullName>Mono</fullName>
                </value>
                <value>
                    <fullName>Monterey</fullName>
                </value>
                <value>
                    <fullName>Napa</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Report_Date__c</fullName>
        <defaultValue>Today()+7</defaultValue>
        <description>Date to automatically create the next fee inspection report. Field not visible on any layouts. Used by workflow and process to create inspection reports.</description>
        <label>Create Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Create_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be checked by a workflow triggered by the Create Report date. The checkbox will trigger the process that creates the fee inspection reports.</description>
        <label>Create Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_by_Custom_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The &quot;Update Property Management Unit with Deal Info&quot; process builder process only runs if this box is checked. If the user creates a new Property Management record any other way, we don&apos;t want the data in those picklists to be overwritten by the process.</description>
        <label>Created by Custom Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_and_Intended_Land_Use__c</fullName>
        <inlineHelpText>Describe the current and intended land use of the property under TNC&apos;s ownership.  Focus on impacts to the conservation targets.</inlineHelpText>
        <label>Current and Intended Land Use</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Acquired__c</fullName>
        <description>Moved to Property Interest</description>
        <inlineHelpText>Please enter the date TNC acquired the property and attach a copy of the closing memo, grant agreements and information regarding restrictions on transfer to the &quot;Notes &amp; Attachments&quot; section of the property management record.</inlineHelpText>
        <label>XDeprecate_Date Acquired</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_First_Acquired__c</fullName>
        <inlineHelpText>Rollup field with the date that the first interest was acquired for this property management unit. This does not include interests that we no longer own.</inlineHelpText>
        <label>Date First Acquired</label>
        <summarizedField>Property_Interest__c.Date_Acquired__c</summarizedField>
        <summaryFilterItems>
            <field>Property_Interest__c.Ownership_Status__c</field>
            <operation>equals</operation>
            <value>TNC Owned Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Interest__c.Property_Interest_Group__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_Monitored_or_Inspected_By_TNC_Staff__c</fullName>
        <description>This should be only for monitoring/inspection where annual monitoring is not required.  Might be able to add functionality to automatically update when an inspection record is created.</description>
        <inlineHelpText>Enter in the date the property was last monitored or inspected by TNC staff if other than required annual inspection.</inlineHelpText>
        <label>XDeprecated: Date Inspected By TNC Staff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Stewardship_Budget_Approved__c</fullName>
        <description>Refer to deal for this info.</description>
        <label>XDeprecate_Date Stewardship Budget App</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Disposition_Approval__c</fullName>
        <description>Should refer to deal for this information. Will need to create a date of actual transfer, but on the property interest level. 3/15/17 BH</description>
        <inlineHelpText>Please enter the date the disposition was approved in the original REPAR. This is the date the acquisition closed.</inlineHelpText>
        <label>Xdeprecate_Date of Disposition Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Report_Filed__c</fullName>
        <description>Moved to Water Right Object</description>
        <inlineHelpText>Please enter the date of the last water report filed.  This field it to be updated every time a water report has be submitted.</inlineHelpText>
        <label>Xdeprecate_Date of Last Report Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decree_Number__c</fullName>
        <description>Moved to Water Right object</description>
        <inlineHelpText>If applicable, enter the decree number issued by the court.    A water right decree can determine if there is a confirmed riparian, pre-1914, or prescriptive water right on the property.</inlineHelpText>
        <label>XDeprecated_Decree Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_Access_to_Property__c</fullName>
        <description>Moved to Property Interest</description>
        <inlineHelpText>Please clearly describe how to access the property.</inlineHelpText>
        <label>XDeprecate_Describe Access to Property</label>
        <length>3500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_All_Leases_on_Property__c</fullName>
        <description>Refer to lease contracts. Leases now in separate related list.</description>
        <label>XDeprecate_Describe All Leases on Pr</label>
        <length>525</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Technology__c</fullName>
        <description>Moved to Water Right Object</description>
        <inlineHelpText>The SWRB requires water measurements using &quot;best available technologies.&quot;  Technologies at the highest technologically practical level, using flow totaling devices and, if necessary, data loggers and telemetry.  Describe the measurement technology used.</inlineHelpText>
        <label>XDeprecate_Description of Technology</label>
        <length>1600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disposition_in_Original_REPAR__c</fullName>
        <description>Refer to deal record.</description>
        <inlineHelpText>Was the disposition included in the original (tract acquisition) REPAR?</inlineHelpText>
        <label>XDeprecate_Disposition in Original</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <formula>DISTANCE(GEOLOCATION(Latitude_Min_Lower_Left__c,Longitude_Min_Lower_Left__c),GEOLOCATION(Latitude_Max_Upper_Right__c,Longitude_Max_Upper_Right__c),&apos;km&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Distance between the lower left and upper right points of the management unit&apos;s extent.</inlineHelpText>
        <label>Distance</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ecological_Monitoring_Costs__c</fullName>
        <description>Assess for removal or redesign. Appears to not be used properly.</description>
        <inlineHelpText>Describe the costs to monitor conservation targets for research purposes. - Do not address the annual required property monitoring in this field.</inlineHelpText>
        <label>Ecological Monitoring Costs</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ecological_Monitoring__c</fullName>
        <inlineHelpText>Describe if and how TNC will monitor the conservation targets. This is a separate discussion from monitoring for legal compliance.</inlineHelpText>
        <label>Ecological Monitoring</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ecoregion__c</fullName>
        <label>Ecoregion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ecoregion_Global</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrolled_in_Irrigated_Ag_Waiver_Program__c</fullName>
        <description>Moved to Property Interest</description>
        <inlineHelpText>If property contains irrigated agricultural lands that discharge irrigation water or storm water into surface waters, you either need to get a discharge permit or enroll in a waiver program.</inlineHelpText>
        <label>XDeprecate_Enrolled in Irrigated Ag Waiv</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, enrolled</fullName>
                </value>
                <value>
                    <fullName>Not enrolled</fullName>
                </value>
                <value>
                    <fullName>Tenant enrolled</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Date_of_Sale_Transfer__c</fullName>
        <description>Moved to Property Interest</description>
        <label>XDeprecated_Expected Date of Transfer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSA_Farm_Tract_Number__c</fullName>
        <description>Moved to Property Interest</description>
        <inlineHelpText>If property has agricultural activity, obtain Farm/Tract numbers from county USDA Farm Service Agency office.</inlineHelpText>
        <label>XDeprecate_FSA Farm/Tract Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Face_Amount__c</fullName>
        <description>Moved to water right object</description>
        <inlineHelpText>The face amount is the total annual amount of diversion authorized for direct diversion or storage by a permit or license.</inlineHelpText>
        <label>XDeprecate_Face Amount</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Grants_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance/Grants Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N300000022KX3EAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grant_Deed_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if the property&apos;s grant deed and all the exhibits are attached to the &quot;Notes and Attachments&quot; section. If not, locate the property&apos;s grant deed and attach it to the record.</inlineHelpText>
        <label>Grant Deed Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grant_Funding_Donor_Restrictions__c</fullName>
        <description>Moved to Property Interest level 4/11/17.</description>
        <inlineHelpText>Provide a summary of grant funding and/or donor restrictions that were placed on the property and attach a copy of the grant agreement or restrictions to the &quot;Notes &amp; Attachments&quot; section.</inlineHelpText>
        <label>XDeprecate_Grant Funding/Donor Restr</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Groundwater_Well_Description__c</fullName>
        <label>XDeprecate_Groundwater Well Description</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Groundwater_Well_Number__c</fullName>
        <label>XDeprecate_Groundwater Well Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Welfare_Exemption_Applied_For__c</fullName>
        <description>Moved to Property Interest</description>
        <inlineHelpText>A welfare exemption is an exemption from real property taxes. If No is selected, you must provide an explanation in the narrative field below.  If Yes, is selected, please attach the initial exemption filing to the &quot;Notes &amp; Attachments&quot; section.</inlineHelpText>
        <label>XDeprecate_Initial Welfare Exemption</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inspection_Due_Date__c</fullName>
        <formula>IF( AND(Inspection_Due_Month__c&gt;0, Inspection_Due_Day__c&gt;0), 
DATE(year(TODAY() ), Inspection_Due_Month__c , Inspection_Due_Day__c ), 
null )</formula>
        <inlineHelpText>Date next inspection is due. Use the &apos;Inspection Due Month&apos; and &apos;Inspection Due Day&apos; to change this date if the date is inaccurate for this year.</inlineHelpText>
        <label>Inspection Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Due_Day__c</fullName>
        <inlineHelpText>Enter the 2-digit day number for the monitoring due date.</inlineHelpText>
        <label>Inspection Due Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inspection_Due_Month__c</fullName>
        <inlineHelpText>Enter the 2 digit month in which inspection is due. Leading zeroes NOT required.</inlineHelpText>
        <label>Inspection Due Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inspector_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the inspector assigned OR TNC staff responsible for the assigned inspector if non-TNC.</inlineHelpText>
        <label>Inspector Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Property_Management6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insurance_Renewal_Date__c</fullName>
        <description>Date next insurance renewal due</description>
        <inlineHelpText>Date that the hazard insurance will need to be renewed.  Setting a date in this field will generate automated email notices to the project team listed on the record, 1 year prior, 120 days prior, and 30 days prior to the renewal date entered.</inlineHelpText>
        <label>Insurance Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Key_Threats_for_this_Property__c</fullName>
        <inlineHelpText>List and describe the conservation threats for this property and how these issues impact the identified conservation targets.</inlineHelpText>
        <label>Key Threats for this Property</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Inspection_Date__c</fullName>
        <description>Not on layouts</description>
        <inlineHelpText>Date of most recent completed and approved annual inspection on this property</inlineHelpText>
        <label>Last Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latitude_Max_Upper_Right__c</fullName>
        <inlineHelpText>Maximum latitude value from the related property interests</inlineHelpText>
        <label>Latitude (Max - Upper Right)</label>
        <summarizedField>Property_Interest__c.Latitude_Upper_Right__c</summarizedField>
        <summaryForeignKey>Property_Interest__c.Property_Interest_Group__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Latitude_Min_Lower_Left__c</fullName>
        <inlineHelpText>Minimum latitude value on releated property interests associated with this PMU.</inlineHelpText>
        <label>Latitude (Min - Lower Left)</label>
        <summarizedField>Property_Interest__c.Latitude_Lower_Left__c</summarizedField>
        <summaryForeignKey>Property_Interest__c.Property_Interest_Group__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Legal_Description_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if the property&apos;s legal description is attached to the &quot;Notes and Attachments&quot; section.  If not, locate the property&apos;s legal description and attach to the record.</inlineHelpText>
        <label>Legal Description Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Link_MU_ID__c</fullName>
        <description>All management units will have a Legal Link ID number that will replace the CLS MABR #.  New PMU&apos;s after 1/30/18 will only get Legal Link #&apos;s.</description>
        <inlineHelpText>Legal Link Monitoring Unit ID number (easements and deed restrictions are monitored individually, so the monitoring unit ID is located on the interest level, for fees this number is located here on the property management record).</inlineHelpText>
        <label>Legal Link Monitoring Unit ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Link_Monitoring_Unit_Name__c</fullName>
        <description>Last updated 4/17/18</description>
        <inlineHelpText>Name of monitoring unit according to Legal Link.</inlineHelpText>
        <label>Legal Link Monitoring Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_ID__c</fullName>
        <description>Moved to Water Right Object</description>
        <inlineHelpText>Please enter the License ID number from the License for Diversion and Water Use document issued by the State Water Rights Board.</inlineHelpText>
        <label>XDeprecate_License ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude_Max_Upper_Right__c</fullName>
        <inlineHelpText>Maximum longitude value from related property interests.</inlineHelpText>
        <label>Longitude (Max - Upper Right)</label>
        <summarizedField>Property_Interest__c.Longitude_Upper_Right__c</summarizedField>
        <summaryForeignKey>Property_Interest__c.Property_Interest_Group__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Longitude_Min_Lower_Left__c</fullName>
        <inlineHelpText>Minimum longitude value from related property interests.</inlineHelpText>
        <label>Longitude (Min - Lower Left)</label>
        <summarizedField>Property_Interest__c.Longitude_Lower_Left__c</summarizedField>
        <summaryForeignKey>Property_Interest__c.Property_Interest_Group__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Management_Plan_Created__c</fullName>
        <inlineHelpText>Date all of the fields related to the management plan were filled in originally (only automatically filled in from June 2018 onward).</inlineHelpText>
        <label>Management Plan Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Management_Plan_Updated__c</fullName>
        <inlineHelpText>Date this record and the management plan that it represents were updated to reflect the most recent tract addition or subtraction.</inlineHelpText>
        <label>Management Plan Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Map_Extent_X_Max__c</fullName>
        <inlineHelpText>Roll-up summary field from the related Property Interest records. X-value for upper right of map.</inlineHelpText>
        <label>Map Extent (X-Max)</label>
        <summarizedField>Property_Interest__c.Map_Extent_X_Max__c</summarizedField>
        <summaryForeignKey>Property_Interest__c.Property_Interest_Group__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Map_Extent_X_Min__c</fullName>
        <inlineHelpText>Roll-up summary field from the related Property Interest records. X-value for lower left of map.</inlineHelpText>
        <label>Map Extent (X-Min)</label>
        <summarizedField>Property_Interest__c.Map_Extent_X_Min__c</summarizedField>
        <summaryForeignKey>Property_Interest__c.Property_Interest_Group__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Map_Extent_Y_Max__c</fullName>
        <inlineHelpText>Roll-up summary field from the related Property Interest records. Y-value for upper right of map.</inlineHelpText>
        <label>Map Extent (Y-Max)</label>
        <summarizedField>Property_Interest__c.Map_Extent_Y_Max__c</summarizedField>
        <summaryForeignKey>Property_Interest__c.Property_Interest_Group__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Map_Extent_Y_Min__c</fullName>
        <inlineHelpText>Roll-up summary field from the related Property Interest records. Y-value for lower left of map.</inlineHelpText>
        <label>Map Extent (Y-Min)</label>
        <summarizedField>Property_Interest__c.Map_Extent_Y_Min__c</summarizedField>
        <summaryForeignKey>Property_Interest__c.Property_Interest_Group__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>